[package]
name = "bevy_cobweb_ui"
description = "UI framework for the bevy game engine"
authors = ["koe <ukoe@protonmail.com>"]
version = "0.12.3"
edition = "2021"
keywords = ["gamedev", "reactive", "ui"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/UkoeHB/bevy_cobweb_ui"

[workspace]
members = ["examples/*", "crates/*"]
exclude = ["examples/*"]

[lib]
path = "src/lib.rs"
doctest = false
test = false

[[test]]
name = "tests"
path = "tests/test/mod.rs"
doctest = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]

[features]
# Default features.
default = ["colors", "widgets"]

# Corresponds to `bevy/track_change_detection`
track_change_detection = [
  "bevy/track_change_detection",
  "bevy_cobweb/track_change_detection",
]

# Enables built-in colors.
colors = []

# Enables built-in assets. TODO: re-evaluate how to use this feature flag
#assets = []

# Enables built-in widgets.
widgets = ["colors"]

# Enables the built-in experimental COB editor.
editor = ["hot_reload", "colors", "widgets", "dep:foldhash"]

# Enables Serialize/Deserialize on some built-in types.
serde = ["bevy/serialize"]

# Enables hot-reloading. Note that embedded files are not hot-reloaded by default due to perf
# issues (see https://github.com/bevyengine/bevy/issues/17430). You'll need bevy's
# `embedded_watcher` feature.
hot_reload = ["bevy/file_watcher", "bevy/multi_threaded"]

# Dev features. Enables hot-reloading.
dev = ["hot_reload", "bevy/dynamic_linking"]

[dependencies]
bevy.workspace = true
bevy_cobweb = { version = "0.16.2" }
derive_more = { version = "1.0" }
dyn-clone = { version = "1.0" }
memchr = { version = "2.7" }
nom = { version = "7.1" }
nom_locate = { version = "4.2" }
serde = { version = "1.0" }
smol_str = { version = "0.2" }  # Locked to Bevy's smol_str version.
smallvec = { version = "1.13" }
thiserror = { version = "1.0" }
tracing = { version = "0.1" }
wasm-timer = { version = "0.2" }

# Localization deps
sys-locale = { version = "0.3" }
fluent = { version = "0.16" }
fluent-langneg = { version = "0.14" }
fluent_content = { version = "0.0.5" }
intl-memoizer = { version = "0.5" }
ron = { version = "0.8" }
serde_yaml = { version = "0.9" }
unic-langid = { version = "0.9" }

# Editor deps
foldhash = { version = "0.1.3", optional = true }

# Local sub-crates
bevy_cobweb_ui_derive = { path = "crates/bevy_cobweb_ui_derive", version = "0.3.0" }
cob_sickle_math = { path = "crates/sickle_math", version = "0.6.0" }
cob_sickle_macros = { path = "crates/sickle_macros", version = "0.6.0" }
cob_sickle_ui_scaffold = { path = "crates/sickle_ui_scaffold", version = "0.6.0" }

[dev-dependencies]
bevy = { version = "0.15", default-features = false, features = [
  "serialize",

  # AssetEvents for AudioSource are not registered if no audio types are included
  # this causes some systems to panic because of missing SystemParam
  "wav",
] }
tracing-subscriber = { version = "0.3" }

[workspace.dependencies.bevy]
version = "0.15"
default-features = false
features = [
  "bevy_asset",
  "bevy_audio",
  "bevy_text",
  "bevy_state",
  "bevy_ui",
  "bevy_winit",
  "custom_cursor",
  "default_font",
  "x11",
  "wav"
]

[profile.dev.package."*"]
opt-level = 2
