[package]
name = "sickle_macros"
version = "0.4.0"
edition = "2021"
description = "Macros for sickle_ui"
keywords = ["sickle_ui"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/UkoeHB/bevy_cobweb_ui"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
