[package]
name = "cob_sickle_math"
version = "0.5.0"
edition = "2021"
description = "Math dependencies for sickle_ui"
license = "MIT OR Apache-2.0"
repository = "https://github.com/UkoeHB/bevy_cobweb_ui"

[dependencies]
bevy = { version = "0.15", default-features = false }
serde = { version = "1.0", features = ["derive"] }
