[package]
name = "cob_sickle_math"
version = "0.5.1"
edition = "2021"
description = "Math dependencies for sickle_ui"
license = "MIT OR Apache-2.0"
repository = "https://github.com/UkoeHB/bevy_cobweb_ui"

[dependencies]
bevy = { version = "0.15", default-features = false, features = ["bevy_color", "bevy_ui"] }
serde = { version = "1.0", features = ["derive"] }
