[package]
name = "cob_sickle_math"
version = "0.7.2"
edition = "2021"
description = "Math dependencies for sickle_ui"
license = "MIT OR Apache-2.0"
repository = "https://github.com/UkoeHB/bevy_cobweb_ui"

[dependencies]
bevy.workspace = true
bevy_slow_text_outline.workspace = true
serde.workspace = true
