[package]
name = "cob_sickle_ui_scaffold"
version = "0.5.0-rc.3"
edition = "2021"
description = "Scaffolding framework for sickle_ui"
license = "MIT OR Apache-2.0"
repository = "https://github.com/UkoeHB/bevy_cobweb_ui"

[features]
dev = ["bevy/dynamic_linking"]
disable-ui-context-placeholder-warn = []

[dependencies]
cob_sickle_math = { path = "../sickle_math", version = "0.5.0-rc.3" }
cob_sickle_macros = { path = "../sickle_macros", version = "0.5.0-rc.3" }

bevy = { version = "0.15.0-rc.3", default-features = false, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "x11",
] }
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "1.13" }
smol_str = { version = "0.2" }
