[package]
name = "cob_sickle_ui_scaffold"
version = "0.6.0"
edition = "2021"
description = "Scaffolding framework for sickle_ui"
license = "MIT OR Apache-2.0"
repository = "https://github.com/UkoeHB/bevy_cobweb_ui"

[features]
dev = ["bevy/dynamic_linking"]
disable-ui-context-placeholder-warn = []

[dependencies]
cob_sickle_math = { path = "../sickle_math", version = "0.6.0" }
cob_sickle_macros = { path = "../sickle_macros", version = "0.6.0" }

bevy.workspace = true
dyn-clone = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "1.13" }
smol_str = { version = "0.2" }
