[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[features]
default = ["dev"]
dev = ["bevy_cobweb_ui/dev"]

[dependencies]
bevy = { version = "0.15", default-features = true }
bevy_cobweb = { version = "0.14" }
bevy_cobweb_ui = { path = "../../", default-features = false }
tracing = { version = "0.1" }
