[package]
name = "cursors"
version = "0.1.0"
edition = "2021"

[features]
default = ["dev"]
dev = ["bevy_cobweb_ui/dev"]

[dependencies]
bevy.workspace = true
bevy_cobweb = { version = "0.16" }
bevy_cobweb_ui = { path = "../../", default-features = false }
tracing = { version = "0.1" }

serde = { version = "1.0" }
