[package]
name = "editor_demo"
version = "0.1.0"
edition = "2021"

[features]
default = ["dev", "editor"]
dev = ["bevy_cobweb_ui/dev"]
editor = ["bevy_cobweb_ui/editor"]

[dependencies]
bevy = { version = "0.15", default-features = true }
bevy_cobweb = { version = "0.14" }
bevy_cobweb_ui = { path = "../../", default-features = false, features = ["colors"] }
rand = { version = "0.8" }
rand_chacha = { version = "0.3" }
tracing = { version = "0.1" }

serde = { version = "1.0" }
