[package]
name = "game_menu"
version = "0.1.0"
edition = "2021"

[features]
default = ["dev"]
dev = ["bevy_cobweb_ui/dev"]

[dependencies]
bevy.workspace = true
bevy_cobweb.workspace = true
bevy_cobweb_ui = { path = "../../", default-features = false, features = ["widgets", "firasans_default"] }
tracing = { version = "0.1" }
