[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[features]
default = ["dev"]
dev = ["bevy_cobweb_ui/dev"]

[dependencies]
bevy.workspace = true
bevy_cobweb.workspace = true
bevy_cobweb_ui = { path = "../../", default-features = false, features = ["colors", "widgets", "firasans_default"] }
tracing = { version = "0.1" }

serde = { version = "1.0" }
# bevy-inspector-egui = { version = "0.31" }
# bevy_egui = { version = "0.34", default-features = false }
