[package]
name = "radio_buttons"
version = "0.1.0"
edition = "2021"

[features]
default = ["dev"]
dev = ["bevy_cobweb_ui/dev"]

[dependencies]
bevy = { version = "0.15.0-rc.3", default-features = true, features = ["serialize"] }
bevy_cobweb = { version = "0.13.0-rc.3" }
bevy_cobweb_ui = { path = "../../", default-features = false, features = ["widgets"] }
tracing = { version = "0.1" }
